로즐린 수정

--- a/_posts/2019-05-22-roslyn.md
+++ b/_posts/2019-05-22-roslyn.md
@@ -1,18 +1,14 @@
 ---
 layout: post
-title:  "temp"
+title:  "bin/roslyn/csc.exe' 경로의 일부를 찾을 수 없습니다."
 date:   2016-04-06
 excerpt: "Minimal, one column Jekyll theme for your blog."
 operation: true
 tag:
-- jekyll 
-- moon
-- blog
-- about
-- theme
+- roslyn 
 comments: true
 ---
 
-![Moon Homepage](https://cloud.githubusercontent.com/assets/754514/14509720/61c61058-01d6-11e6-93ab-0918515ecd56.png)    
+
     
 <center><b>Moon</b> is a minimal, one column jekyll theme.</center>
