--- a/_posts/2019-05-22-roslyn.md
+++ b/_posts/2019-05-22-roslyn.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "bin/roslyn/csc.exe' 경로의 일부를 찾을 수 없습니다."
+title:  "bin/roslyn/csc.exe 경로의 일부를 찾을 수 없습니다."
 date:   2016-04-06
 excerpt: "Minimal, one column Jekyll theme for your blog."
 operation: true
