--- a/_posts/2019-05-22-roslyn.md
+++ b/_posts/2019-05-22-roslyn.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "운영이슈 - bin/roslyn/csc.exe 경로의 일부를 찾을 수 없습니다."
-date:   2016-04-06
+date:   2019-06-12
 excerpt: "roslyn 컴파일 api 라고?"
 operation: true
 tag:
@@ -11,8 +11,10 @@ comments: true
 
 
     
-<center><h8><b>bin/roslyn/csc.exe</b>경로의 일부를 찾을 수 없습니다<h8></center>
+<h8><b>bin/roslyn/csc.exe</b>경로의 일부를 찾을 수 없습니다<h8>
+    
 =============
+    
 ```cs
 <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
